<resources>
    <string name="app_name">CompanyManager</string>
    <string name="phone">SĐT</string>
    <string name="address">Địa chỉ</string>
    <string name="search_hint">Tìm kiếm công ty</string>
    <string name="internet_error">Lỗi đường truyền</string>
    <string name="title_image_before">Ảnh trước khi bảo dưỡng</string>
    <string name="title_image_after">Ảnh sau khi bảo dưỡng</string>
    <string name="company">Tên công ty</string>
    <string name="mother_company">Công ty mẹ</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="trait">Đặc điểm</string>
    <string name="error">Lỗi đã sửa</string>
    <string name="employeeName">Người sửa</string>
    <string name="date">Ngày sửa</string>
    <string name="note">Ghi chú</string>
    <string name="add_info_maintain">Bổ sung thông tin bảo dưỡng</string>
    <string name="noData">Không có dữ liệu</string>
    <string name="company_info">Thông tin công ty</string>
    <string name="last_maintain">Lần bảo dưỡng gần nhất</string>
    <string name="floor_less_3">Nhỏ hơn 3 tầng</string>
    <string name="floor_39">Từ 3 đến 6 tầng</string>
    <string name="floor_69">Từ 6 đến 9 tầng</string>
    <string name="floor_more_9">Trên 9 tầng</string>
    <string name="problem">Sự cố</string>
    <string name="error_nguon">Do nguồn</string>
    <string name="problem_computer">Do máy tính</string>
    <string name="problem_cap">Do cáp mạng</string>
    <string name="problem_difference">Khác</string>
    <string name="save">Lưu lại</string>
    <string name="no_camera">Điện thoại của bạn không có camera</string>
    <string name="analysis">Thống kê</string>
</resources>
